hphp/hack/test/typecheck/expression_trees/invalid_call1.php.like_types.exp
File "invalid_call1.php", line 15, characters 5-18:
Expression trees only support function calls and static method calls on named classes. (Parsing[1002])
